<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShellShock HGG</string>
    <string name="action_settings">Settings</string>
    <string name="username">Input your username</string>
    <string name="password">Input your password</string>
    <string name="login">Log in</string>
    <string name="logup">Log up</string>
    <string name="singlemode">Single Mode</string>
    <string name="onlinemode">Online Mode</string>
    <string name="setting">Setting</string>
    <string name="exit">Exit</string>
    <string name="name">Name</string>
    <string name="level">Lv 0</string>
    <string name="exp">Exp 0</string>

</resources>
