<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/name" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@id/name"
        android:text="@string/level" />

    <TextView
        android:id="@+id/exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/name"
        android:text="@string/exp" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/exit" />

    <Button
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/exit"
        android:layout_alignParentLeft="true"
        android:text="@string/setting" />

    <Button
        android:id="@+id/onlinemode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/setting"
        android:layout_alignParentLeft="true"
        android:text="@string/onlinemode" />

    <Button
        android:id="@+id/singlemode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/onlinemode"
        android:layout_alignParentLeft="true"
        android:text="@string/singlemode" />

</RelativeLayout>